src/test/deca/context/invalid/created/return/return_void_int.deca
// Description :
//    return mauvais type : int, demandé void
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: (2.7) Type de retour effectif : boolean, déclaré : void

class A{
void met(){
return 1;
}
}